fix: 재가입 테스트 — 빈 리스트 대신 실제 프로젝트로 mock하여 deleteAll 검증 통과